--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -11,13 +11,13 @@
 
 <body>
   <nav class="navbar bg-info">
-    <a class="navbar-brand text-light p-3" href="/">Note Taker
+    <a class="navbar-brand text-light p-3" href="/">SnapNotes
     </a>
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-light">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-      <h4 class="mt-4">Take notes with Express</h4>
+      <h1 class="display-4">SnapNotes <span role="img" aria-label="Memo">📝</span></h1>
+      <h4 class="mt-4">Take notes with Express!</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
   </div>
